Bug 675410 - Fix bottom rounded corners, hopefully in the same openGL context as the rest of the window. r=mstange, r=bgirard